<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.thirteen_stones.activities.MainActivity">

    <!--Play button/new game menu option -->
    <item
        android:id="@+id/action_new_game"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/new_game"
        app:showAsAction="ifRoom|withText" />

    <!--List/Get Statistics menu option -->
    <item
        android:id="@+id/action_statistics"
        android:icon="@drawable/ic_outline_list_24"
        android:title="@string/view_statistics"
        app:showAsAction="ifRoom|withText" />

    <!--About menu option -->
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <!--Reset Statistics menu option -->
    <item
        android:id="@+id/action_reset_stats"
        android:icon="@drawable/ic_baseline_cancel_presentation_24"
        android:title="@string/reset_statistics"
        app:showAsAction="ifRoom|withText" />

    <!--Settings menu option -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>